trunk/Archive2/70/57ed368c052ebd/output
main.cpp: In function 'int main()':
main.cpp:18:5: error: 'A' was not declared in this scope
     A *p1 = reinterpret_cast<char*>(new storage_type[N]);
     ^
main.cpp:18:8: error: 'p1' was not declared in this scope
     A *p1 = reinterpret_cast<char*>(new storage_type[N]);
        ^
